# gdcore

./: .gitignore  CMakeLists.txt  README.md  TODO
cmake/: FindCurl.cmake  FindGnumeric.cmake  FindLdap.cmake  Find_GraphicsMagick++.cmake  Find_GraphicsMagick.cmake  Find_gdcore.cmake  install_progs.cmake
doc/: asterisk.txt
doxygen/: Doxyfile  Doxyfile.cmake
src/: gdBarcode.c  gdBarcode.h  gdCore.cpp  gdCore.h  gdCoreSql.cpp  gdCoreSql.h  gdImage.cpp  gdImage.h  gdLdap.cpp  gdLdap.h  gdPdf.c  gdPdf.h  gdSpreadSheet.c  gdSpreadSheet.h  gdXml.cpp  gdXml.h
src/bdAsterisk/: AbstractAnswer.cpp  AbstractAnswer.h  Actions.h  Answer.cpp  Answer.h  Conference.cpp  Conference.h  ConnectionHandler.cpp  ConnectionHandler.h  IpAddress.cpp  IpAddress.h  MeetMeList.cpp  MeetMeList.h  MeetMeListAnswer.cpp  MeetMeListAnswer.h  MeetMeMuteUnMute.cpp  MeetMeMuteUnMute.h  MeetMeUser.cpp  MeetMeUser.h  Message.cpp  Message.h  OriginateCall.cpp  OriginateCall.h  TcpSocket.cpp  TcpSocket.h
tests/bdAsterisk/: CMakeLists.txt  build.sh  test.cpp
